# FigletGPTPlugin

./: README.md  main.py  openapi (copy).yaml  pyproject.toml  requirments.txt
well-known/: ai-plugin.json
